@@ -10,13 +10,13 @@ import dev.ftb.mods.ftblibrary.snbt.SNBTCompoundTag;
 import dev.ftb.mods.ftbquests.events.ObjectCompletedEvent;
 import dev.ftb.mods.ftbquests.events.ObjectStartedEvent;
 import dev.ftb.mods.ftbquests.events.QuestProgressEventData;
+import dev.ftb.mods.ftbquests.quest.translation.TranslationKey;
 import dev.ftb.mods.ftbquests.util.NetUtils;
 import net.fabricmc.api.EnvType;
 import net.fabricmc.api.Environment;
 import net.minecraft.core.HolderLookup;
 import net.minecraft.nbt.CompoundTag;
 import net.minecraft.nbt.ListTag;
-import net.minecraft.nbt.StringTag;
 import net.minecraft.nbt.Tag;
 import net.minecraft.network.RegistryFriendlyByteBuf;
 import net.minecraft.network.chat.Component;
@@ -34,7 +34,6 @@ public final class Chapter extends QuestObject {
 	private String filename;
 	private final List<Quest> quests;
 	private final List<QuestLink> questLinks;
-	private final List<String> rawSubtitle;
 	private boolean alwaysInvisible;
 	private String defaultQuestShape;
 	private double defaultQuestSize;
@@ -61,7 +60,6 @@ public final class Chapter extends QuestObject {
 		this.filename = filename;
 		quests = new ArrayList<>();
 		questLinks = new ArrayList<>();
-		rawSubtitle = new ArrayList<>(0);
 		alwaysInvisible = false;
 		defaultQuestShape = "";
 		defaultQuestSize = 1D;
@@ -144,16 +142,6 @@ public final class Chapter extends QuestObject {
 		nbt.putString("filename", filename);
 		super.writeData(nbt, provider);
 
-		if (!rawSubtitle.isEmpty()) {
-			ListTag list = new ListTag();
-
-			for (String v : rawSubtitle) {
-				list.add(StringTag.valueOf(v));
-			}
-
-			nbt.put("subtitle", list);
-		}
-
 		if (alwaysInvisible) {
 			nbt.putBoolean("always_invisible", true);
 		}
@@ -198,13 +186,6 @@ public final class Chapter extends QuestObject {
 	public void readData(CompoundTag nbt, HolderLookup.Provider provider) {
 		filename = nbt.getString("filename");
 		super.readData(nbt, provider);
-		rawSubtitle.clear();
-
-		ListTag subtitleNBT = nbt.getList("subtitle", Tag.TAG_STRING);
-
-		for (int i = 0; i < subtitleNBT.size(); i++) {
-			rawSubtitle.add(subtitleNBT.getString(i));
-		}
 
 		alwaysInvisible = nbt.getBoolean("always_invisible");
 		defaultQuestShape = nbt.getString("default_quest_shape");
@@ -243,7 +224,6 @@ public final class Chapter extends QuestObject {
 	public void writeNetData(RegistryFriendlyByteBuf buffer) {
 		super.writeNetData(buffer);
 		buffer.writeUtf(filename, Short.MAX_VALUE);
-		NetUtils.writeStrings(buffer, rawSubtitle);
 		buffer.writeUtf(defaultQuestShape, Short.MAX_VALUE);
 		buffer.writeDouble(defaultQuestSize);
 		buffer.writeCollection(images, (buf, img) -> img.writeNetData(buf));
@@ -269,7 +249,6 @@ public final class Chapter extends QuestObject {
 	public void readNetData(RegistryFriendlyByteBuf buffer) {
 		super.readNetData(buffer);
 		filename = buffer.readUtf(Short.MAX_VALUE);
-		NetUtils.readStrings(buffer, rawSubtitle);
 		defaultQuestShape = buffer.readUtf(Short.MAX_VALUE);
 		defaultQuestSize = buffer.readDouble();
 		NetUtils.read(buffer, images, buf -> ChapterImage.fromNet(this, buf));
@@ -386,7 +365,7 @@ public final class Chapter extends QuestObject {
 	@Override
 	public void onCreated() {
 		if (filename.isEmpty()) {
-			String basename = titleToID(rawTitle).orElse(toString());
+			String basename = titleToID(getRawTitle()).orElse(toString());
 			filename = basename;
 
 			Set<String> existingNames = new HashSet<>();
@@ -426,7 +405,7 @@ public final class Chapter extends QuestObject {
 	public void fillConfigGroup(ConfigGroup config) {
 		super.fillConfigGroup(config);
 
-		config.addList("subtitle", rawSubtitle, new StringConfig(null), "");
+		config.addList("subtitle", getRawSubtitle(), new StringConfig(), this::setRawSubtitle, "");
 
 		ConfigGroup appearance = config.getOrCreateSubgroup("appearance").setNameKey("ftbquests.quest.appearance");
 		appearance.addEnum("default_quest_shape", defaultQuestShape.isEmpty() ? "default" : defaultQuestShape, v -> defaultQuestShape = v.equals("default") ? "" : v, QuestShape.idMapWithDefault);
@@ -531,7 +510,12 @@ public final class Chapter extends QuestObject {
 	}
 
 	public List<String> getRawSubtitle() {
-		return Collections.unmodifiableList(rawSubtitle);
+		return file.getTranslationManager().getStringListTranslation(this, file.getLocale(), TranslationKey.CHAPTER_SUBTITLE)
+				.orElse(List.of());
+	}
+
+	public void setRawSubtitle(List<String> rawSubtitle) {
+		setTranslatableValue(TranslationKey.CHAPTER_SUBTITLE, rawSubtitle);
 	}
 
 	public boolean consumeItems() {
